objects/ACP_Top_Open_Opportunity__c.object
<CustomObject>
    <description>Esther 04/24/17 – Created for Account Plan</description>
    <fields>
        <fullName>ACP_5Y__c</fullName>
        <formula>ACP_Opportunity_Name__r.Five_Year_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Five Year Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Account_Plan__c</fullName>
        <description>Esther 04/24/17 – Created for Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>ACP_Account_Plan__c</referenceTo>
        <relationshipLabel>Top Open Opportunities</relationshipLabel>
        <relationshipName>Top_Open_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACP_Application_Segment__c</fullName>
        <formula>TEXT(ACP_Opportunity_Name__r.Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CY_Value__c</fullName>
        <formula>ACP_Opportunity_Name__r.Current_Year_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Close_Date__c</fullName>
        <formula>ACP_Opportunity_Name__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACP_Created_Date__c</fullName>
        <formula>ACP_Opportunity_Name__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACP_Current_Status_Comment__c</fullName>
        <description>Esther 04/24/17 – Created for Account Plan</description>
        <label>Current Status Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACP_DND_Application__c</fullName>
        <formula>TEXT( ACP_Opportunity_Name__r.DND_Application__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DND Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Manufacture_Start_Date__c</fullName>
        <formula>ACP_Opportunity_Name__r.Manufacturing_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacture Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACP_Next_Year_Value__c</fullName>
        <defaultValue>2.0</defaultValue>
        <label>Next Year Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Esther 04/24/17 – Created for Account Plan</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Top Open Opportunities</relationshipLabel>
        <relationshipName>Top_Open_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACP_Phase__c</fullName>
        <formula>ACP_Opportunity_Name__r.Current_Phase__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_PlatformName__c</fullName>
        <formula>TEXT( ACP_Opportunity_Name__r.Specific_Platform__c )</formula>
        <label>Platform Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_ProjectPlatform__c</fullName>
        <formula>TEXT( ACP_Opportunity_Name__r.Project_Platform__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Tender_Name__c</fullName>
        <formula>ACP_Opportunity_Name__r.Tender__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tender Name</label>
        <type>Text</type>
    </fields>
    <label>Top Open Opportunity</label>
    <nameField>
        <displayFormat>TOpp-{00000000}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top Open Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>